Fix refmaps being wrong in built jars

--- a/build.gradle
+++ b/build.gradle
@@ -69,3 +69,11 @@ tasks.register('doMerge') {
 }
 
 tasks.build.dependsOn(tasks.doMerge)
+
+tasks.register("fixMergedJarRefmaps", MergedJarRefmapFixTask) {
+    inputJar = new File(forgix.outputDir, forgix.mergedJarName)
+}
+
+mergeJars {
+    finalizedBy fixMergedJarRefmaps
+}
