--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -72,12 +72,16 @@ shadowJar {
     archiveClassifier = "dev-shadow"
 }
 
-task shadowCompat(type: Jar) {
+tasks.register('shadowCompat', Jar) {
     archiveFileName = "${archivesBaseName}-${archiveVersion.get()}_${rootProject.minecraft_version_least}-${rootProject.minecraft_version}_FABRIC.${archiveExtension.get()}"
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
     manifest.from jar.manifest
     from zipTree(remapJar.archiveFile)
-    from { project(":common:Compat").subprojects.findAll { ("forge" != it.name) }.collect { zipTree(it.transformProductionFabric.archiveFile) } }
+    from {
+        project(":common:Compat").subprojects
+                .findAll { ("forge" != it.name) }
+                .collect { zipTree(it.remapJar.archiveFile) }
+    }
 }
 
 tasks.build.dependsOn(shadowCompat)
